[project]
name = "EveryStamp"
version = "0.0.0"
authors = [
    { name = "Frits Sweijen" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
everystamp = "everystamp.everystamp:main"

[project.urls]
"Homepage" = "https://github.com/tikk3r/EveryStamp"
"Bug Tracker" = "https://github.com/tikk3r/EveryStamp/issues"

[build-system]
requires = ["setuptools", "wheel", "requests"]
