[project]
name = "EveryStamp"
version = "1.6.0"
authors = [
    { name = "Frits Sweijen" },
]
description = "A Python interface for retrieving FITS or image cutouts from a variety of astronomical surveys."
requires-python = ">=3.9"
dependencies = ["astropy<6", "aplpy", "astroquery", "blend-modes", "colormaps", "matplotlib", "markupsafe", "numpy<2", "panstamps", "Pillow", "opencv-python-headless", "pyavm", "python-magic", "pyvo", "requests", "scikit-image", "tqdm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.scripts]
everystamp = "everystamp.everystamp:main"

[project.urls]
"Homepage" = "https://tikk3r.github.io/EveryStamp/"
"Bug Tracker" = "https://github.com/tikk3r/EveryStamp/issues"

[build-system]
requires = ["setuptools", "wheel", "requests"]
